--- a/sass/_offer.scss
+++ b/sass/_offer.scss
@@ -1,36 +1,52 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 .offer-wrapper {
-    padding: 120px 24px;
+  padding: 120px 24px;
 
-    width: 100%;
+  width: 100%;
 
-    background: url(/img/offer-background.svg) top center no-repeat;
-    background-size: cover;
+  background: url(/img/offer-background.svg) top center no-repeat;
+  background-size: cover;
 }
 
 .offer {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
 
-    h3 {
-        margin-bottom: 16px;
-        font-weight: bold;
-        font-size: 60px;
-        color: $dark-text;
-  
-        @include mq(desktop, max) {
-          font-size: 50px;
-        }
-        @include mq(s-desktop, max) {
-          font-size: 40px;
-        }
-    }
+  h3 {
+      margin-bottom: 16px;
+      font-weight: bold;
+      font-size: 60px;
+      color: $dark-text;
 
-    p {
-        font-size: 18px;
-        color: $dark-text;
-        line-height: 28px;
-        text-align: center;
-    }
+      @include mq(desktop, max) {
+        font-size: 50px;
+      }
+      @include mq(s-desktop, max) {
+        font-size: 40px;
+      }
+  }
+
+  p {
+      font-size: 18px;
+      color: $dark-text;
+      line-height: 28px;
+      text-align: center;
+  }
 }
