--- a/sass/_works.scss
+++ b/sass/_works.scss
@@ -1,3 +1,10 @@
+/*
+* Prefixed by https://autoprefixer.github.io
+* PostCSS: v8.4.14,
+* Autoprefixer: v10.4.7
+* Browsers: last 4 version
+*/
+
 
 .works {
     margin-top: 64px;
@@ -56,11 +63,21 @@
     }
 
     &__slider {
+        display: -webkit-box;
+        display: -ms-flexbox;
         display: flex;
-        flex-direction: row;
-        flex-wrap: wrap;
-        justify-content: center;
-        align-items: center;
+        -webkit-box-orient: horizontal;
+        -webkit-box-direction: normal;
+            -ms-flex-direction: row;
+                flex-direction: row;
+        -ms-flex-wrap: wrap;
+            flex-wrap: wrap;
+        -webkit-box-pack: center;
+            -ms-flex-pack: center;
+                justify-content: center;
+        -webkit-box-align: center;
+            -ms-flex-align: center;
+                align-items: center;
     }
 
     &__card {
@@ -83,7 +100,8 @@
         height: auto;
 
         border-radius: 15px;
-        box-shadow: 0px 4px 10px 2px rgba(82, 14, 0, 0.08);
+        -webkit-box-shadow: 0px 4px 10px 2px rgba(82, 14, 0, 0.08);
+                box-shadow: 0px 4px 10px 2px rgba(82, 14, 0, 0.08);
 
         .card-link {
             position: absolute;
@@ -96,10 +114,21 @@
         .card-content {
             position: relative;
 
+            display: -webkit-box;
+
+            display: -ms-flexbox;
+
             display: flex;
-            flex-direction: column;
-            justify-content: flex-start;
-            align-items: flex-start;
+            -webkit-box-orient: vertical;
+            -webkit-box-direction: normal;
+                -ms-flex-direction: column;
+                    flex-direction: column;
+            -webkit-box-pack: start;
+                -ms-flex-pack: start;
+                    justify-content: flex-start;
+            -webkit-box-align: start;
+                -ms-flex-align: start;
+                    align-items: flex-start;
 
             padding: 24px;
         }
@@ -107,9 +136,15 @@
             width: 100%;
         }
         .card-title {
+            display: -webkit-box;
+            display: -ms-flexbox;
             display: flex;
-            justify-content: space-between;
-            align-items: center;
+            -webkit-box-pack: justify;
+                -ms-flex-pack: justify;
+                    justify-content: space-between;
+            -webkit-box-align: center;
+                -ms-flex-align: center;
+                    align-items: center;
 
             width: 100%;
 
@@ -128,4 +163,3 @@
         }
     }
 }
-
